# grid-pathfinding-visualizer

./: LICENSE  README.md
C+ program/: CMakeLists.txt  README.md  build.bat  build_mingw.bat  run.bat  一键启动.bat  一键启动.vbs  创建桌面快捷方式.vbs
C+ program/maps/: open_map.txt  sample_map.txt
C+ program/output/: comparison.html
C+ program/scripts/: check_rebuild.ps1  setup_frontend.bat
C+ program/src/: main.cpp
C+ program/src/algorithms/: AStarPathFinder.cpp  AStarPathFinder.h  BFSPathFinder.cpp  BFSPathFinder.h  BidirectionalAStarPathFinder.cpp  BidirectionalAStarPathFinder.h  BidirectionalBFSPathFinder.cpp  BidirectionalBFSPathFinder.h  DFSPathFinder.cpp  DFSPathFinder.h  DijkstraPathFinder.cpp  DijkstraPathFinder.h  GraphPathFinder.cpp  GraphPathFinder.h  GreedyBestFirstPathFinder.cpp  GreedyBestFirstPathFinder.h  Heuristic.cpp  Heuristic.h  IDAStarPathFinder.cpp  IDAStarPathFinder.h  IDDFSPathFinder.cpp  IDDFSPathFinder.h  WeightedAStarPathFinder.cpp  WeightedAStarPathFinder.h
C+ program/src/api/: ApiServer.cpp  ApiServer.h  GridSerializer.cpp  GridSerializer.h  MapSession.cpp  MapSession.h  PathfindingService.cpp  PathfindingService.h
C+ program/src/app/: Application.cpp  Application.h
C+ program/src/core/: Grid.cpp  Grid.h  MazeGenerator.cpp  MazeGenerator.h  PathFinder.h  PathResult.h
C+ program/src/patterns/: AlgorithmFactory.cpp  AlgorithmFactory.h  CommandManager.cpp  CommandManager.h  Observer.cpp  Observer.h  PathfindingContext.cpp  PathfindingContext.h
C+ program/src/ui/: ConsoleRenderer.cpp  ConsoleRenderer.h  (+2 more)
C+ program/web/: index.html
(+10 files in other folders)
